--- a/SecurePass/login.html
+++ b/SecurePass/login.html
@@ -44,9 +44,9 @@
         <label for="password" data-i18n="label_password">Password</label>
         <div class="input-row">
           <input id="password" class="input-control" type="password" placeholder="" data-i18n-placeholder="ph_password" />
-          <button id="togglePwd" class="btn-icon" aria-label="toggle password">👁️</button>
+          <button id="togglePwd" class="btn-icon" aria-label="toggle password">👁</button>
         </div>
-        <div class="pwd-meta"><div class="muted" data-i18n="hint_min8">Minimum 8 characters.</div></div>
+        <br>        
       </div>
 
       <div class="actions">
