Se remueve biometric.html y se midifica home login setting y app.js de residuo de biometric.

--- a/SecurePass/home.html
+++ b/SecurePass/home.html
@@ -32,7 +32,7 @@
       <h2 id="welcome" class="card-title">Welcome</h2>
 
       <div class="actions-vertical">
-        <a id="gotoSettings" class="btn secondary" href="settings.html" data-i18n="home_change">Change password / fingerprint</a>
+        <a id="gotoSettings" class="btn secondary" href="settings.html" data-i18n="home_change">settings</a>
         <a id="gotoPasskeys" class="btn secondary" href="passkeys.html" data-i18n="home_passkeys">View passkeys</a>
         <button id="btnLogout" class="btn link" data-i18n="home_logout">Sign out</button>
       </div>
