verificación contraseña y caracter especiales

--- a/SecurePass/index.html
+++ b/SecurePass/index.html
@@ -48,6 +48,12 @@
         <div class="input-row">
           <input id="regPassword" class="input-control" type="password" placeholder="" data-i18n-placeholder="ph_password" />
         </div>
+         <br>
+      <div class="field">
+        <label for="regPassword2" data-i18n="label_regPassword2">Re-enter Password</label>
+        <div class="input-row">
+          <input id="regPassword2" class="input-control" type="password" placeholder="" data-i18n-placeholder="ph_password2" />
+        </div>
         <br>
         <div class="pwd-meta"><div class="muted" data-i18n="hint_min8">Minimum 8 characters.</div></div>
       </div>
