Verificar mayuscular y cambio de contraseña.

--- a/SecurePass/settings.html
+++ b/SecurePass/settings.html
@@ -37,7 +37,12 @@
           <input id="currentUser" class="input-control" type="text" />
         </div>
       </div>
-
+      <div class="field">
+          <label for="currentPassword" data-i18n="label_currentpassword">Current password</label>
+          <div class="input-row">
+            <input id="currentPassword" class="input-control" type="password" placeholder="" data-i18n-placeholder="ph_currentpassword" />
+          </div>
+      </div>
       <div class="field">
         <label for="newPassword" data-i18n="label_newpassword">New password</label>
         <div class="input-row">
