--- a/SecurePass/settings.html
+++ b/SecurePass/settings.html
@@ -49,6 +49,13 @@
           <input id="newPassword" class="input-control" type="password" placeholder="" data-i18n-placeholder="ph_newpassword" />
         </div>
       </div>
+      </div class="field">
+        <label for="newPassword2" data-i18n="label_newpassword2">Re-enter new password</label>
+        <div class="input-row">
+          <input id="newPassword2" class="input-control" type="password" placeholder="" data-i18n-placeholder="ph_newpassword2" />
+        </div>
+        <br>
+        <div class="pwd-meta"><div class="muted" data-i18n="hint_min8">Minimum 8 characters.</div></div>
 
       <div class="actions" style="margin-top:18px;">
         <button id="btnSave" class="btn primary" data-i18n="btn_save">Save</button>
