Se desglosa app.js en distintos archivos java script para ordenar repositorio.

--- a/SecurePass/login.html
+++ b/SecurePass/login.html
@@ -58,6 +58,6 @@
 
   </main>
 
-  <script src="assets/js/app.js"></script>
+  <script type="module" src="assets/js/app.js"></script>
 </body>
 </html>
